test/corpus/literals.txt
================================================================================
Integers
================================================================================

69;
-123;
!420;

--------------------------------------------------------------------------------

(program
  (expression_statement
    (integer))
  (expression_statement
    (unary_expression
        (integer)))
  (expression_statement
    (unary_expression
    (integer))))

================================================================================
Booleans
================================================================================

true
!true

--------------------------------------------------------------------------------

(program
  (expression_statement
    (boolean))
  (expression_statement
    (unary_expression
        (boolean))))
