test/corpus/statements.txt
================================================================================
Let statements
================================================================================

let a = "foo";
let b = 55;
let c = true;

--------------------------------------------------------------------------------

(program
  (assignment
    (identifier)
    (string))
  (assignment
    (identifier)
    (integer))
  (assignment
    (identifier)
    (boolean)))
